fix: white space around the disabled slider indicator
fixes #1935

--- a/src/stylus/components/_sliders.styl
+++ b/src/stylus/components/_sliders.styl
@@ -230,3 +230,7 @@ theme(slider, "input-group--slider")
 
     span
       transform: rotate(-45deg) translateZ(0)
+
+  &__track,
+  &__track-fill
+    position: absolute
